# goodness-ai

./: .gitignore  README.md  pyproject.toml  questions.yml
goodness_ai/: cli.py  crew.py
goodness_ai/config/: agents.yaml  tasks.yaml
